crates/client/tests/snapshots/render__band_switch_mid_slide.snap
---
source: crates/client/tests/render.rs
expression: "fixture.render_drawn(Size::new(60, 12), &drawn)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 60, height: 12 },
    content: [
        "│                            │                              ",
        "│                            │                              ",
        "│                            │                              ",
        "│                            │                              ",
        "│                            │                              ",
        "│                            │                              ",
        "╰────────────────────────────╯                              ",
        "╭────────────────────────────╮                              ",
        "│lower                       │                              ",
        "│                            │                              ",
        "│                            │                              ",
        "│                            │                              ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 30, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 30, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 30, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 30, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 30, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 30, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 30, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 7, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 30, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 8, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 8, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 30, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 9, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 9, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 30, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 10, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 10, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 30, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 11, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 11, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 30, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
cursor: None
