crates/client/tests/snapshots/render__centred_first_column_leaves_the_strip_start_empty.snap
---
source: crates/client/tests/render.rs
expression: "fixture.render(Size::new(80, 24))"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "                    ╭──────────────────────────────────────╮                    ",
        "                    │centred                               │                    ",
        "                    │                                      │                    ",
        "                    │                                      │                    ",
        "                    │                                      │                    ",
        "                    │                                      │                    ",
        "                    │                                      │                    ",
        "                    │                                      │                    ",
        "                    │                                      │                    ",
        "                    │                                      │                    ",
        "                    │                                      │                    ",
        "                    │                                      │                    ",
        "                    │                                      │                    ",
        "                    │                                      │                    ",
        "                    │                                      │                    ",
        "                    │                                      │                    ",
        "                    │                                      │                    ",
        "                    │                                      │                    ",
        "                    │                                      │                    ",
        "                    │                                      │                    ",
        "                    │                                      │                    ",
        "                    │                                      │                    ",
        "                    │                                      │                    ",
        "                    ╰──────────────────────────────────────╯                    ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 0, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 60, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 1, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 1, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 60, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 2, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 2, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 60, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 3, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 3, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 60, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 4, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 4, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 60, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 5, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 5, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 60, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 6, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 6, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 60, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 7, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 7, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 60, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 8, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 8, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 60, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 9, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 9, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 60, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 10, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 10, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 60, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 11, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 11, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 60, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 12, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 12, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 60, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 13, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 13, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 60, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 14, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 14, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 60, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 15, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 15, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 60, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 16, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 16, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 60, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 17, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 17, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 60, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 18, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 18, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 60, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 19, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 19, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 60, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 20, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 20, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 60, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 21, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 21, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 60, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 22, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 22, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 60, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 23, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 60, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
cursor: Some(Position { x: 28, y: 1 })
