crates/client/tests/snapshots/render__coloured_window.snap
---
source: crates/client/tests/render.rs
expression: "fixture.render(Size::new(60, 6))"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 60, height: 6 },
    content: [
        "╭────────────────────────────╮                              ",
        "│red green rgb               │                              ",
        "│                            │                              ",
        "│                            │                              ",
        "│                            │                              ",
        "╰────────────────────────────╯                              ",
    ],
    styles: [
        x: 0, y: 0, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 30, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 1, fg: Indexed(1), bg: Reset, underline: Reset, modifier: BOLD,
        x: 4, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 1, fg: Reset, bg: Indexed(2), underline: Reset, modifier: NONE,
        x: 10, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 1, fg: Rgb(10, 20, 30), bg: Reset, underline: Reset, modifier: UNDERLINED,
        x: 14, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 1, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 30, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 2, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 30, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 3, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 30, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 4, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 4, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 30, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 5, fg: Indexed(147), bg: Reset, underline: Reset, modifier: BOLD,
        x: 30, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
cursor: Some(Position { x: 14, y: 1 })
